--- a/index.html
+++ b/index.html
@@ -8,6 +8,59 @@
     <title>Laidlaw Bank</title>
   </head>
   <body>
+    <div class="container">
+      <h1 class="jumbotron">Welcome to Laidlaw Bank.</h1>
+      <h3>Please add an initial deposit, and feel free to withdraw and deposit your money.</h3><br>
 
+      <form id="bank-form">
+        <div class="row">
+          <div class="col-md-6">
+            <div class="form-group">
+              <label for="name">Name:</label><br>
+              <input type="text" name="name" id="name">
+            </div>
+
+            <div class="form-group">
+              <label for="init-deposit">Initial Deposit:</label><br>
+              <input type="text" name="init-deposit" id="init-deposit">
+            </div>
+          </div>
+
+          <div class="col-md-6">
+            <div class="form-group">
+              <label for="deposit">Deposit Amount:</label><br>
+              <input type="text" name="deposit" id="deposit">
+            </div>
+
+            <div class="form-group">
+              <label for="withdraw">Withdrawal Amount:</label><br>
+              <input type="text" name="withdraw" id="withdraw">
+            </div>
+          </div>
+
+          <div class="col-md-6">
+            <div class="form-group">
+              <br><button type="submit" class="btn">Submit</button>
+            </div>
+          </div>
+
+          <div class="col-md-6">
+            <div class="form-group">
+              <br><button type="button" id="deposit" class="btn">Deposit</button>
+              <button type="button" id="withdraw" class="btn">Withdraw</button>
+            </div>
+          </div>
+        </div>
+      </form>
+
+      <div class="row">
+        <div class="col-md-12">
+          <h3>Log:</h3>
+          <ul id="log">
+            <!-- Will append with actions take by user -->
+          </ul>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
