Add working deposit and withdraw buttons

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 
           <div class="col-md-6">
             <div class="form-group">
-              <br><button type="button" id="deposit" class="btn">Deposit</button>
-              <button type="button" id="withdraw" class="btn">Withdraw</button>
+              <br><button type="button" id="deposit-send" class="btn">Deposit</button>
+              <button type="button" id="withdraw-send" class="btn">Withdraw</button>
             </div>
           </div>
         </div>
