Change append to prepend

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="container">
-      <h1 class="jumbotron">Welcome to Laidlaw Bank.</h1>
+      <h1 class="jumbotron">Welcome to Laidlaw Bank</h1>
       <h3>Please add an initial deposit, and feel free to withdraw and deposit your money.</h3><br>
 
       <div class="row">
